tiles-repo/go-bumblebee-jazz/0.7.1/manifest/kustomize/gql/gql-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: gql
spec:
  selector:
    matchLabels:
      app: gql 
  template:
    metadata:
      labels: 
        app: gql 
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: gql-go-bumblebee
        image:  herochinese/go-bumblebee-gql:new-combo-jazz
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /ping
            port: 9030
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5        
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 9030
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
          - name: http
            containerPort: 9030
        resources:
          requests: 
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
