tiles-repo/go-bumblebee-jazz/0.7.1/manifest/kustomize/gql/gql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gql
spec: 
  type: ClusterIP
  selector:
    app: gql
  ports:
  - name: http
    port: 9030
    targetPort: 9030
